added a submit and cancel button

--- a/add_event.htm
+++ b/add_event.htm
@@ -48,14 +48,32 @@
        <div class="form-group">
          <label  class="control-label col-sm-2" for="time">Time:</label>
          <div class="col-sm-10">
-           <input type="time" step="1200" class="form-control" id="datetimepicker3" placeholder="Enter Time" name="time" value="">
+           <input type="time" step="1200" class="form-control" id="datetimepicker3" placeholder="Enter Time" name="time" value="12:00">
+         </div>
+       </div>
+
+       <!-- SUBMIT BUTTON -->
+       <!-- TODO: actually submit the data that is given -->
+
+       <div class="form-group">
+         <div class="col-sm-10">
+           <input type="submit" class="form-control" id="submit" name="submit" >
+         </div>
+       </div>
+
+
+       <!-- CANCEL BUTTON -->
+
+       <div class="form-group">
+         <div class="col-sm-10">
+           <input type="button" class="form-control" name="cancel" value="Cancel" onclick="window.location='user_interface.html'">
          </div>
        </div>
 
 
 
+       <!-- TODO: Add something that tells the user if the inputed the correct data or not -->
 
-<!--TODO: Add a submit button as well as a cancel button that returns back to the main page. -->
 
 
 
