--- a/user_interface.html
+++ b/user_interface.html
@@ -2,22 +2,27 @@
 <html>
     <body>
 	<font face = "Tw Cen MT" size = "5">
-        <div id="chalk"></div>
-	
-	
-    
+        <!--<div id="chalk"></div>-->
+
 	
 	<script src="http://code.jquery.com/jquery-1.10.2.min.js"> </script>
 	<script src="chalk.20170830_edit.js"></script>
- 	<script src="adminMode.js"></script>
-	<script src="user.js"></script>
+	
+	<p> Let's schedule a meeting! </p>
+	<p> How would you like to schedule a meeting? </p>
+	
+	
+	If you are an Administrator...
+	<form action="adminLogin_interface.html">
+	<input type="submit" value="Admin Login" onclick="alert('Please login to continue')">
+	</form>
 
-	Would you like to schedule a meeting?
-
-	<li> Admin <input type="checkbox" id="myCheck"  onclick="alert('Please login to continue.'), adminLogin()"> </li>
-
-	<li> User <input type="checkbox" id="myCheck"  onclick="alert('Okay!'), "> </li>
-
+	
+	...or a User
+	<form action="userLogin_interface.html">
+	<input type="submit" value="Continue to schedule" onclick="alert('Okay!')">
+	</form>	
+	
 	</font>
     </body>
 </html>
