--- a/user_interface.html
+++ b/user_interface.html
@@ -19,7 +19,7 @@
 
 	
 	...or a User
-	<form action="userLogin_interface.html">
+	<form action="userAvailability_interface.html">
 	<input type="submit" value="Continue to schedule" onclick="alert('Okay!')">
 	</form>	
 	
