--- a/user_interface.html
+++ b/user_interface.html
@@ -20,7 +20,7 @@
 	
 	...or a User
 	<form action="userAvailability_interface.html">
-	<input type="submit" value="Continue to schedule" onclick="alert('Okay!')">
+	<input type="submit" value="Continue to add availability" onclick="alert('Okay!')">
 	</form>	
 	
 	</font>
