--- a/add_event.htm
+++ b/add_event.htm
@@ -51,7 +51,20 @@
 
            <label for="time" class="control-label col-sm-2" for=>Time:</label>
            <div id="time" style="inline" class="col-sm-5">
-              <select name="selectHour" id="selectHour"></select>
+              <select name="selectHour" id="selectHour">
+                <option value="01">01</option>
+                <option value="02">02</option>
+                <option value="03">03</option>
+                <option value="04">04</option>
+                <option value="05">05</option>
+                <option value="06">06</option>
+                <option value="07">07</option>
+                <option value="08">08</option>
+                <option value="09">09</option>
+                <option value="10">10</option>
+                <option value="11">11</option>
+                <option value="12">12</option>
+              </select>
               <select name="selectMinutes" id="minutes">
                 <option value="00">00</option>
                 <option value="20">20</option>
