Added comments to help explain the functions used

--- a/add_event.htm
+++ b/add_event.htm
@@ -4,14 +4,11 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
-
-
     <title>Add Event</title>
   </head>
   <body>
@@ -101,13 +98,13 @@
                 <option value="AM">AM</option>
                 <option value="PM">PM</option>
               </select>
-            
-
          </div>
-         <input type="checkbox" id="timeCheckBox" onclick="timeSwitcher()">
+         <input style="inline" type="checkbox" id="timeCheckBox" onclick="timeSwitcher()">
          <label for="timeCheckBox">24-Hour mode</label>
 
+         
 
+         <div class="container"> 
             <!-- SUBMIT BUTTON -->
             <!-- TODO: actually submit the data that is given -->
 
@@ -126,7 +123,8 @@
                     correct data or not -->
 
 
-
+          </div>
+        </div>
        </form>
 
      </div>
