Attempting to fix ampm stuff

--- a/add_event.htm
+++ b/add_event.htm
@@ -28,9 +28,7 @@
      <div class="container">
 
        <!-- EVENT INPUT -->
-       <form action="user_interface.html" method="post">
-
-
+       <form>
         <div class="form-group">
            <label class="control-label col-sm-2" for="event">Event:</label>
            <div class="col-sm-5">
@@ -38,9 +36,7 @@
                     placeholder="Enter Event" name="event" required>
            </div>
 
-
             <!-- DATE INPUT-->
-
            <label class="control-label col-sm-2" for="date">Date:</label>
            <div class="col-sm-5">
              <input type="date" class="form-control" id="date"
@@ -48,7 +44,6 @@
            </div>
 
             <!-- TIME INPUT-->
-
             <label for="startTime" class="control-label col-sm-2" >Start:</label>
             <div id="startTime" style="inline" class="col-sm-5">
               <select name="startHour" id="startHour">
@@ -121,15 +116,7 @@
          <button type="button" name="cancel" class="btn btn-primary"
          onclick="window.location='user_interface.html'">Cancel</button>
 
-
-
-         <!-- TODO: Add something that tells the user if the inputed the
-                    correct data or not -->
-
-
-
        </form>
-
      </div>
 
 
