--- a/user.html
+++ b/user.html
@@ -17,7 +17,7 @@
         <p>Please select an event that you would like to attend</p>
     </div>
 
-    <table style="width:90%">
+    <table name="eventTable" id="eventTable "style="width:90%">
         <tr>
             <th>EVENT:</th>
             <th>DATE:</th>
@@ -25,6 +25,8 @@
             <th>ATTENDING:</th>
         </tr>
     </table>
+
+    <button onclick="addRow()">Try it</button>
 
 
 
@@ -43,5 +45,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
-<script src="meeting.js"></script>
+<script src="add_event.js"></script>
 </html>
