--- a/user_interface.html
+++ b/user_interface.html
@@ -1,29 +1,58 @@
 
 <html>
-    <body>
-	<font face = "Tw Cen MT" size = "5">
-        <!--<div id="chalk"></div>-->
-
+    <head>
 	
+	<!-- <font face = "Tw Cen MT" size = "5"> -->
+
+    	<!-- Required meta tags -->
+    	<meta charset="utf-8">
+    	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+          crossorigin="anonymous">    
+
+	<title> Let's schedule a meeting! </title>
+    </head>
+	
+	<!-- HEADER -->
+   <body>
+	<div class="jumbotron">
+	<h1> Let's schedule a meeting! (Beta version) </h1>
+       	<p> How would you like to schedule a meeting? </p>
+     	</div>
+		
+	<!-- <font face = "Tw Cen MT" size = "5"> -->
+        <!--<div id="chalk"></div>-->
+	
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+          crossorigin="anonymous">
+	
+	<!-- Javascript files -->
 	<script src="http://code.jquery.com/jquery-1.10.2.min.js"> </script>
 	<script src="chalk.20170830_edit.js"></script>
 	
-	<p> Let's schedule a meeting! </p>
-	<p> How would you like to schedule a meeting? </p>
 	
+	<!-- Admin or user selection -->
+	<div class="container">
 	
-	If you are an Administrator...
+	If you are an Administrator and would like to add an event...
 	<form action="adminLogin_interface.html">
 	<input type="submit" value="Admin Login" onclick="alert('Please login to continue')">
 	</form>
 
 	
 	...or a User
-	<form action="userAvailability_interface.html">
+	<form action="user_avalability.html">
 	<input type="submit" value="Continue to add availability" onclick="alert('Okay!')">
 	</form>	
 	
-	</font>
+	<!-- </font> -->
     </body>
 </html>
 
