--- a/adminLogin_interface.html
+++ b/adminLogin_interface.html
@@ -1,19 +1,35 @@
 
 <html>
-    <body>
-	<font face = "Tw Cen MT" size = "5">
-        
+	<!-- Required meta tags -->
+    	<meta charset="utf-8">
+    	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+          crossorigin="anonymous">
 	
+    <body>
+	<!-- <font face = "Tw Cen MT" size = "5"> -->
+        
+	<!-- Javascript files -->
 	<script src="http://code.jquery.com/jquery-1.10.2.min.js"> </script>
 	<script src="chalk.20170830_edit.js"></script>
  	<script src="adminMode.js"></script>
-	
-	Please use your administrative login
-	
-	<div id="chalk"></div>
-	<script> adminLogin();</script>
 
-	</font>
+	<!-- HEADER -->
+	<div class="jumbotron">
+	<!-- <h1> Let's schedule a meeting! (Beta version) </h1> -->
+       	Please use your administrative login
+     	</div>
+	
+	
+	<!-- Administrative login -->
+	<div id="chalk"></div>
+	<script> adminLogin(); </script>
+	
+	
+	<!-- </font> -->
     </body>
 </html>
-
