--- a/add_event.html
+++ b/add_event.html
@@ -50,17 +50,17 @@
             <!-- TIME INPUT-->
 
             <label for="startTime" class="control-label col-sm-2" >Start:</label>
-            <div id="startTime" style="inline" class="col-sm-5">
+            <div id="startTime"  class="col-sm-5">
               <select name="startHour" id="startHour">
-                <option value="01">01</option>
-                <option value="02">02</option>
-                <option value="03">03</option>
-                <option value="04">04</option>
-                <option value="05">05</option>
-                <option value="06">06</option>
-                <option value="07">07</option>
-                <option value="08">08</option>
-                <option value="09">09</option>
+                <option value="01">1</option>
+                <option value="02">2</option>
+                <option value="03">3</option>
+                <option value="04">4</option>
+                <option value="05">5</option>
+                <option value="06">6</option>
+                <option value="07">7</option>
+                <option value="08">8</option>
+                <option value="09">9</option>
                 <option value="10">10</option>
                 <option value="11">11</option>
                 <option value="12">12</option>
@@ -77,17 +77,17 @@
             </div>
 
           <label for="endTime" class="control-label col-sm-2" >End:</label>
-          <div id="endTime" style="inline" class="col-sm-5">
+          <div id="endTime"  class="col-sm-5">
               <select name="endHour" id="endHour">
-                <option value="01">01</option>
-                <option value="02">02</option>
-                <option value="03">03</option>
-                <option value="04">04</option>
-                <option value="05">05</option>
-                <option value="06">06</option>
-                <option value="07">07</option>
-                <option value="08">08</option>
-                <option value="09">09</option>
+                <option value="01">1</option>
+                <option value="02">2</option>
+                <option value="03">3</option>
+                <option value="04">4</option>
+                <option value="05">5</option>
+                <option value="06">6</option>
+                <option value="07">7</option>
+                <option value="08">8</option>
+                <option value="09">9</option>
                 <option value="10">10</option>
                 <option value="11">11</option>
                 <option value="12">12</option>
@@ -110,26 +110,12 @@
 
             <!-- SUBMIT BUTTON -->
             <!-- TODO: actually submit the data that is given -->
-
          <button type="submit" onclick = "submitVals()" class="btn btn-primary" name="submit">Submit</button>
 
-
-
             <!-- CANCEL BUTTON -->
-
-
          <button type="button" name="cancel" class="btn btn-primary"
          onclick="window.location='user_interface.html'">Cancel</button>
-
-
-
-         <!-- TODO: Add something that tells the user if the inputed the
-                    correct data or not -->
-
-
-
        </form>
-
      </div>
 
 
