--- a/user_interface.html
+++ b/user_interface.html
@@ -51,7 +51,7 @@
 
 	<!-- User -->
 	...or a User
-	<form action="user_avalability.html">
+	<form action="user_availability.html">
 	<button type="user" onclick="alert('Okay!')" class="btn btn-primary"
 		name="user">Continue to add availability</button>
 	</form>	
