--- a/redirect_interface.html
+++ b/redirect_interface.html
@@ -15,7 +15,7 @@
    <body>
 	<div class="jumbotron">
 	<h1> Let's schedule a meeting! (Beta version) </h1>
-	<p> Redirecting... </p>
+	<p> Event added! Redirecting... </p>
        	<p> What would you like to do next? </p>
      	</div>
 		
