--- a/add_event.html
+++ b/add_event.html
@@ -28,7 +28,7 @@
      <div class="container">
 
        <!-- EVENT INPUT -->
-       <form action="user_interface.html" method="post">
+       <form action="redirect_interface.html" method="post">
 
 
         <div class="form-group">
