--- a/add_event.html
+++ b/add_event.html
@@ -28,7 +28,7 @@
      <div class="container">
 
        <!-- EVENT INPUT -->
-       <form action="redirect_interface.html" method="post">
+       <form> <!--action="redirect_interface.html" method="post">-->
 
 
         <div class="form-group">
@@ -106,6 +106,7 @@
          </div>
          <input type="checkbox" id="timeCheckBox" onclick="timeSwitcher()">
          <label for="timeCheckBox">24-Hour mode</label>
+         <p> </p>
 
 
             <!-- SUBMIT BUTTON -->
