--- a/add_event.html
+++ b/add_event.html
@@ -111,7 +111,7 @@
 
             <!-- SUBMIT BUTTON -->
             <!-- TODO: actually submit the data that is given -->
-         <button type="submit" onclick = "submitVals()", "window.location.href='redirect_interface.html'" class="btn btn-primary" name="submit">Submit</button>
+         <button type="submit" onclick = "submitVals()", window.location.href="redirect_interface.html" class="btn btn-primary" name="submit">Submit</button>
 
             <!-- CANCEL BUTTON -->
          <button type="button" name="cancel" class="btn btn-primary"
