--- a/add_event.html
+++ b/add_event.html
@@ -28,7 +28,7 @@
      <div class="container">
 
        <!-- EVENT INPUT -->
-       <form onclick = "invalidDate()" method = "post">
+       <form onclick = "invalidDate()" >
 
 
         <div class="form-group">
