Fixed the entire time function

--- a/add_event.html
+++ b/add_event.html
@@ -70,7 +70,7 @@
                 <option value="20">20</option>
                 <option value="40">40</option>
               </select>
-              <select name="ampm" id="ampm">
+              <select name="ampm" onchange="timeSwitcher()" id="ampm">
                 <option value="AM">AM</option>
                 <option value="PM">PM</option>
               </select>
@@ -97,7 +97,7 @@
                 <option value="20">20</option>
                 <option value="40">40</option>
               </select>
-              <select name="ampm2" id="ampm2">
+              <select name="ampm2" onchange="timeSwitcher()" id="ampm2">
                 <option value="AM">AM</option>
                 <option value="PM">PM</option>
               </select>
