--- a/test.html
+++ b/test.html
@@ -1,35 +1,16 @@
 <html>
   <body>
-    <script src = "linkedlist.js"> </script>
+    <script src = "dataIO.js"> </script>
     <script>
 
     function test() {
-      var list = new linkedlist;
-      console.log("list created");
-      list.add(9);
-      console.log("added 9");
-      list.add(10);
-      console.log("added 10");
-      list.add(4);
-      console.log("added 4");
-      list.add(11);
-      console.log("added 11");
-      var object = list.search(9);
-      console.log(object);
-      if (object != 0) {
-        console.log("found 9");
+      var arr = new Array;
+      for (var i = 0; i < 16; i++){
+        arr[i] = i;
       }
-      else {
-        console.log("object not found");
-      }
-      object = list.remove(9);
-      console.log(object);
-      if (object == true) {
-        console.log("removal of 9 successful");
-      }
-      else {
-        console.log("removal unsuccessful");
-      }
+      console.log(arr.length);
+      writeData(arr, 4, "test");
+      readData("test");
     } </script>
   </body>
 </html>
