Hopefully populated lists

--- a/user_interface.html
+++ b/user_interface.html
@@ -1,7 +1,7 @@
 
 <html>
     <head>
-	
+
 	<!-- <font face = "Tw Cen MT" size = "5"> -->
 
     	<!-- Required meta tags -->
@@ -12,35 +12,36 @@
 	<link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-          crossorigin="anonymous">    
+          crossorigin="anonymous">
 
 	<title> Let's schedule a meeting! </title>
     </head>
-	
+
 	<!-- HEADER -->
    <body>
 	<div class="jumbotron">
 	<h1> Let's schedule a meeting! (Beta version) </h1>
        	<p> How would you like to schedule a meeting? </p>
      	</div>
-		
+
 	<!-- <font face = "Tw Cen MT" size = "5"> -->
         <!--<div id="chalk"></div>-->
-	
+
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
-	
+
 	<!-- Javascript files -->
 	<script src="http://code.jquery.com/jquery-1.10.2.min.js"> </script>
 	<script src="chalk.20170830_edit.js"></script>
-	
-	
+  <script src="populate.js"></script>
+
+
 	<!-- Admin or user selection -->
 	<div class="container">
-	
+
 	<!-- Admin -->
 	If you are an Administrator and would like to add an event...
 	<form action="adminLogin_interface.html">
@@ -54,8 +55,8 @@
 	<form action="user_availability.html">
 	<button type="user" onclick="alert('Okay!')" class="btn btn-primary"
 		name="user">Continue to add availability</button>
-	</form>	
-	
+	</form>
+
 	<!-- </font> -->
     </body>
 </html>
