--- a/user_interface.html
+++ b/user_interface.html
@@ -18,7 +18,8 @@
     </head>
 
 	<!-- HEADER -->
-   <body>
+
+   <body onload = "populate();">
 	<div class="jumbotron">
 	<h1> Let's schedule a meeting! (Beta version) </h1>
        	<p> How would you like to schedule a meeting? </p>
@@ -36,7 +37,10 @@
 	<!-- Javascript files -->
 	<script src="http://code.jquery.com/jquery-1.10.2.min.js"> </script>
 	<script src="chalk.20170830_edit.js"></script>
+  <script src="linkedlist.js"></script>
+  <script src="dataIO.js"></script>
   <script src="populate.js"></script>
+  <script src="meeting.js"></script>
 
 
 	<!-- Admin or user selection -->
