Fixed the page redirection

--- a/add_event.html
+++ b/add_event.html
@@ -28,7 +28,7 @@
      <div class="container">
 
        <!-- EVENT INPUT -->
-       <form >
+       <form action = "javascript:redirect();" method = "post">
 
 
         <div class="form-group">
@@ -115,7 +115,7 @@
 
             <!-- CANCEL BUTTON -->
          <button type="button" name="cancel" class="btn btn-primary"
-         onclick="window.location='user_interface.html'">Cancel</button>
+         onclick="alert('Redirecting to home.'), window.location='user_interface.html'">Cancel</button>
        </form>
      </div>
 
