--- a/add_event.html
+++ b/add_event.html
@@ -133,5 +133,7 @@
 
   </body>
 
+  <script src = "linkedlist.js"></script>
+  <script src ="meeting.js"></script>
   <script src="add_event.js"></script>
 </html>
