--- a/user_availability.html
+++ b/user_availability.html
@@ -28,7 +28,7 @@
         </thead>
         <tbody>
             <tr>
-                
+
             </tr>
         </tbody>
     </table>
@@ -44,4 +44,5 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 <script src="add_event.js"></script>
+<script src="dataIO.js"></script>
 </html>
