--- a/redirect_interface.html
+++ b/redirect_interface.html
@@ -10,7 +10,7 @@
           href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
-	
+
 	<!-- HEADER -->
    <body>
 	<div class="jumbotron">
@@ -18,24 +18,25 @@
 	<p> Event added! Redirecting... </p>
        	<p> What would you like to do next? </p>
      	</div>
-		
+
 	<!-- <font face = "Tw Cen MT" size = "5"> -->
         <!--<div id="chalk"></div>-->
-	
+
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
-	
+
 	<!-- Javascript files -->
 	<script src="http://code.jquery.com/jquery-1.10.2.min.js"> </script>
 	<script src="chalk.20170830_edit.js"></script>
-	
-	
+  <script src="dataIO.js"></script>
+
+
 	<!-- Home page or add event -->
 	<div class="container">
-	
+
 	<!-- Go back to home page -->
 	If you would like to return to the home page...
 	<form action="user_interface.html">
@@ -49,9 +50,8 @@
 	<form action="add_event.html">
 	<button type="addevent" onclick="alert('Okay!')" class="btn btn-primary"
 		name="addevent">Continue to add another event</button>
-	</form>	
-	
+	</form>
+
 	<!-- </font> -->
     </body>
 </html>
-
