--- a/redirect_interface.html
+++ b/redirect_interface.html
@@ -32,6 +32,8 @@
 	<script src="http://code.jquery.com/jquery-1.10.2.min.js"> </script>
 	<script src="chalk.20170830_edit.js"></script>
   <script src="dataIO.js"></script>
+  <script src="meeting.js"></script>
+  <script src="linkedlist.js"></script>
 
 
 	<!-- Home page or add event -->
