--- a/user_availability.html
+++ b/user_availability.html
@@ -45,4 +45,6 @@
 </body>
 <script src="add_event.js"></script>
 <script src="dataIO.js"></script>
+<script src="linkedlist.js"></script>
+<script src="meeting.js"></script>
 </html>
