--- a/add_event.html
+++ b/add_event.html
@@ -11,6 +11,11 @@
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
 
+          <!-- JavaScript Files -->
+          <script src = "linkedlist.js"></script>
+          <script src ="meeting.js"></script>
+          <script src="add_event.js"></script>
+          <script src="dataIO.js"></script>
 
     <title>Add Event</title>
   </head>
@@ -133,8 +138,5 @@
 
   </body>
 
-  <script src = "linkedlist.js"></script>
-  <script src ="meeting.js"></script>
-  <script src="add_event.js"></script>
-  <script src="dataIO.js"></script>
+
 </html>
