--- a/adminLogin_interface.html
+++ b/adminLogin_interface.html
@@ -1,6 +1,7 @@
 
 <html>
 	<!-- Required meta tags -->
+  <head>
     	<meta charset="utf-8">
     	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -10,16 +11,18 @@
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
 
+          <!-- Javascript files -->
+        	<script src="http://code.jquery.com/jquery-1.10.2.min.js"> </script>
+        	<script src="chalk.20170830_edit.js"></script>
+         	<script src="adminMode.js"></script>
+          <script src="dataIO.js"></script>
+          <script src="meeting.js"></script>
+          <script src="linkedlist.js"></script>
+</head>
     <body>
 	<!-- <font face = "Tw Cen MT" size = "5"> -->
 
-	<!-- Javascript files -->
-	<script src="http://code.jquery.com/jquery-1.10.2.min.js"> </script>
-	<script src="chalk.20170830_edit.js"></script>
- 	<script src="adminMode.js"></script>
-  <script src="dataIO.js"></script>
-  <script src="meeting.js"></script>
-  <script src="linkedlist.js"></script>
+
 
 	<!-- HEADER -->
 	<div class="jumbotron">
