--- a/redirect_interface.html
+++ b/redirect_interface.html
@@ -1,6 +1,7 @@
 
 <html>
 
+<head>
     	<!-- Required meta tags -->
     	<meta charset="utf-8">
     	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,6 +12,14 @@
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
 
+          	<!-- Javascript files -->
+          	<script src="http://code.jquery.com/jquery-1.10.2.min.js"> </script>
+          	<script src="chalk.20170830_edit.js"></script>
+            <script src="dataIO.js"></script>
+            <script src="meeting.js"></script>
+            <script src="linkedlist.js"></script>
+
+</head>
 	<!-- HEADER -->
    <body>
 	<div class="jumbotron">
@@ -28,12 +37,6 @@
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
 
-	<!-- Javascript files -->
-	<script src="http://code.jquery.com/jquery-1.10.2.min.js"> </script>
-	<script src="chalk.20170830_edit.js"></script>
-  <script src="dataIO.js"></script>
-  <script src="meeting.js"></script>
-  <script src="linkedlist.js"></script>
 
 
 	<!-- Home page or add event -->
