--- a/user_availability.html
+++ b/user_availability.html
@@ -9,6 +9,13 @@
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
+
+        <!-- JavaScript Files -->
+        <script src="add_event.js"></script>
+        <script src="dataIO.js"></script>
+        <script src="linkedlist.js"></script>
+        <script src="meeting.js"></script>
+
     <title>Select Event</title>
 </head>
 <body>
@@ -43,8 +50,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
-<script src="add_event.js"></script>
-<script src="dataIO.js"></script>
-<script src="linkedlist.js"></script>
-<script src="meeting.js"></script>
+
 </html>
