--- a/add_event.html
+++ b/add_event.html
@@ -14,6 +14,7 @@
           <!-- JavaScript Files -->
           <script src = "linkedlist.js"></script>
           <script src ="meeting.js"></script>
+          <script src="global.js"></script>
           <script src="add_event.js"></script>
           <script src="dataIO.js"></script>
 
