--- a/adminLogin_interface.html
+++ b/adminLogin_interface.html
@@ -15,9 +15,12 @@
         	<script src="http://code.jquery.com/jquery-1.10.2.min.js"> </script>
         	<script src="chalk.20170830_edit.js"></script>
          	<script src="adminMode.js"></script>
-          <script src="dataIO.js"></script>
-          <script src="meeting.js"></script>
           <script src="linkedlist.js"></script>
+          <script src="meeting.js"></script>
+          <script src="global.js"></script>
+          <script src="dataIO.js"></script>
+
+
 </head>
     <body>
 	<!-- <font face = "Tw Cen MT" size = "5"> -->
