--- a/redirect_interface.html
+++ b/redirect_interface.html
@@ -17,6 +17,7 @@
           	<script src="chalk.20170830_edit.js"></script>
             <script src="linkedlist.js"></script>
             <script src="meeting.js"></script>
+            <script src="global.js"></script>
             <script src="dataIO.js"></script>
 
 
