--- a/user_availability.html
+++ b/user_availability.html
@@ -12,9 +12,12 @@
 
         <!-- JavaScript Files -->
         <script src="add_event.js"></script>
-        <script src="dataIO.js"></script>
-        <script src="linkedlist.js"></script>
+        <script src="global.js"></script>
         <script src="meeting.js"></script>
+        <script src="linkedlist.js"></script>
+        <script src="dataIO.js"></script>
+
+
 
     <title>Select Event</title>
 </head>
