--- a/user_interface.html
+++ b/user_interface.html
@@ -18,9 +18,11 @@
         	<script src="http://code.jquery.com/jquery-1.10.2.min.js"> </script>
         	<script src="chalk.20170830_edit.js"></script>
           <script src="linkedlist.js"></script>
-          <script src="dataIO.js"></script>
           <script src="meeting.js"></script>
-          
+          <script src="global.js"></script>
+          <script src="dataIO.js"></script>
+
+
 
 	<title> Let's schedule a meeting! </title>
     </head>
