added a user select/add page

--- a/user_interface.html
+++ b/user_interface.html
@@ -29,7 +29,7 @@
 
 	<!-- HEADER -->
 
-   <body onload = "populate();">
+   <body onload = "populateEvent();">
 	<div class="jumbotron">
 	<h1> Let's schedule a meeting! (Beta version) </h1>
        	<p> How would you like to schedule a meeting? </p>
@@ -58,7 +58,7 @@
 
 	<!-- User -->
 	...or a User
-	<form action="user_availability.html">
+	<form action="user.html">
 	<button type="user" onclick="alert('Okay!')" class="btn btn-primary"
 		name="user">Continue to add availability</button>
 	</form>
