--- a/user.html
+++ b/user.html
@@ -19,8 +19,8 @@
           <script src="add_event.js"></script>
           <script src="dataIO.js"></script>
           <script src="attendee.js" ></script>
-          <script src="user_availability.js" ></script>
-       
+          <script src="user.js" ></script>
+
 
     <title>User</title>
 
@@ -51,11 +51,11 @@
 
     </div>
     <div>
-        <button type="submit" onclick="submitName()" 
+        <button type="submit" onclick="submitName()"
         class="btn btn-primary" name="submit">
         Submit
         </button>
     </div>
-    
+
 </body>
 </html>
