--- a/user.html
+++ b/user.html
@@ -25,7 +25,7 @@
     <title>User</title>
 
 </head>
-<body onload="populateUserSelect('userName')">
+<body onload="populateUserSelect('userName'); populateUser();">
 
     <div class="jumbotron">
         <h1>Select/Create User</h1>
