--- a/add_event.html
+++ b/add_event.html
@@ -92,7 +92,7 @@
 
 
             <!-- SUBMIT BUTTON -->
-            <!-- TODO: actually submit the data that is given -->
+            <!-- : actually submit the data that is given -->
          <button type="submit" onclick = "submitVals()" class="btn btn-primary" name="submit">Submit</button>
 
             <!-- CANCEL BUTTON -->
