--- a/user.html
+++ b/user.html
@@ -41,12 +41,12 @@
 
 
     </div>
-    <div>
+    <form action = "user_availability.html">
         <button type="Continue" onclick="Continue(); "
         class="btn btn-primary" name="Continue">
         Continue
         </button>
-    </div>
+    </form>
 
     <div>
         <label for="createUser">Please insert first and last name.</label>
