--- a/user_availability.html
+++ b/user_availability.html
@@ -44,11 +44,13 @@
         </form>
     </div>
 
+    <button onclick="loadEvents()"> Load </button>
+
     <table name="eventTable" id="eventTable" style="width:90%">
         <thead>
             <tr>
                 <th>EVENT:</th>
-                <th>DATE:</th>
+                <th>DATE (MM/DD/YYYY):</th>
                 <th>TIME:</th>
                 <th>ATTENDING:</th>
             </tr>
@@ -60,7 +62,7 @@
         </tbody>
     </table>
 
-    <button onclick="addRow()">Try it</button>
+    <!--<button onclick="addRow()">Try it</button>-->
 
 
 
