--- a/user.html
+++ b/user.html
@@ -27,7 +27,7 @@
     <title>User</title>
 
 </head>
-<body onload="populateUser(); populateUserSelect('userName')">
+<body onload="populateUser('masterUser'); populateUserSelect('userName')">
 
     <div class="jumbotron">
         <h1>Select/Create User</h1>
