--- a/user_interface.html
+++ b/user_interface.html
@@ -59,7 +59,7 @@
 	<!-- User -->
 	...or a User
 	<form action="user.html">
-	<button type="user" onclick="alert('Okay!')" class="btn btn-primary"
+	<button type="user" class="btn btn-primary"
 		name="user">Continue to add availability</button>
 	</form>
 
