--- a/add_event.html
+++ b/add_event.html
@@ -93,7 +93,7 @@
 
             <!-- SUBMIT BUTTON -->
             <!-- : actually submit the data that is given -->
-         <button type="submit" onclick = "submitVals()" class="btn btn-primary" name="submit">Submit</button>
+         <button type="submit" onclick = "submitVals(), window.location='events.html'" class="btn btn-primary" name="submit">Submit</button>
 
             <!-- CANCEL BUTTON -->
          <button type="button" name="cancel" class="btn btn-primary"
