Got tick box to work

--- a/user_availability.html
+++ b/user_availability.html
@@ -23,7 +23,7 @@
 
     <title>Select Event</title>
 </head>
-<body onload = "populateEvent(); loadEvents(); setName()">
+<body onload = "populateEvent(); setName(); loadEvents()">
 
 
     <div class="jumbotron">
