Created an addRow

--- a/events.html
+++ b/events.html
@@ -15,6 +15,7 @@
     <script src ="meeting.js"></script>
     <script src="global.js"></script>
     <script src="add_event.js"></script>
+    <script src="attendee.js"></script>
     <script src="adminMode.js"></script>
     <script src="dataIO.js"></script>    
     <title>Events</title>
@@ -38,7 +39,7 @@
         </div>
     </div>
     <div>
-        <table name="userTable" id="userTable">
+        <table name="attendeeTable" id="attendeeTable">
             <thead>
                 <tr>
                     <th>ATTENDING:</th>
