Got rid of the admin interface and user_interface.html
Got rid of them the simlify the project a little bit.

--- a/events.html
+++ b/events.html
@@ -35,7 +35,7 @@
     
         <div class="col-sm-5">
             <input type="button" value="Create Event" id="createEvent" onclick="window.location = 'add_event.html'">
-            <input type=button value="Back" id="back" onclick="window.location = 'adminLogin_interface.html'">
+            <input type=button value="Back" id="back" onclick="window.location = 'user.html'">
         </div>
     </div>
     <div>
