--- a/user.html
+++ b/user.html
@@ -47,9 +47,16 @@
     <form action = "user_availability.html">
         <button type="Continue" onclick= "addAvailability()"
         class="btn btn-primary" name="Continue">
-        Continue
+        Add Availability
         </button>
     </form>
+
+    <form action = "add_event.html">
+            <button type="Continue" onclick= "addAvailability()"
+            class="btn btn-primary" name="Continue">
+            Add Event
+            </button>
+        </form>
 
     <div>
         <label for="createUser">Please insert first and last name.</label>
@@ -62,7 +69,7 @@
     <div>
         <button type="submit" onclick="submitName(); "
         class="btn btn-primary" name="submit">
-        Submit
+        Submit Name
         </button>
     </div>
 
