--- a/user_availability.html
+++ b/user_availability.html
@@ -53,7 +53,7 @@
     <button onclick="submit()"> Submit </button>
 
 
-    <form action = "user_interface.html">
+    <form action = "user.html">
         <button type="home" class="btn btn-primary" name="Continue"> Home </button>
     </form>
 
